--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>随机点餐系统</title>
   </head>
